--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -4,7 +4,7 @@
     data-controller="word"
     data-word-word-id-value="<%= dom_id(word) %>"
     data-word-cards-created-value="<%= word.cards_created? %>"
-    data-word-is-new-word-value="<%= (defined?(is_new_word) && is_new_word) || false %>"
+    data-word-apply-js-filters-value="<%= (defined?(apply_js_filters) && apply_js_filters) || false %>"
     data-word-japanese-word-value="<%= word.japanese %>"
     data-word-english-word-value="<%= word.english %>"
     data-word-added-on-value="<%= word.added_to_list_on %>"
