--- a/app/views/words/create.turbo_stream.erb
+++ b/app/views/words/create.turbo_stream.erb
@@ -1,6 +1,6 @@
 <% if @word.valid? %>
   <%= turbo_stream.prepend "words_1" do %>
-    <%= render partial: "words/word", locals: { word: @word, is_new_word: true } %>
+    <%= render partial: "words/word", locals: { word: @word, apply_js_filters: true } %>
   <% end %>
 
   <%= turbo_stream.replace "new-word-form" do %>
