fix another JS filtering bug on lists shorter than one page

--- a/app/views/words/_filters.html.erb
+++ b/app/views/words/_filters.html.erb
@@ -33,7 +33,7 @@
     <%= link_to words_path(filter_params_plus(filter: "cards_not_created")), title: "Showing all words", class: "filter-off" do %>
       <%= heroicon "adjustments" %>
       <span class="filter-description">
-        All matching
+        Unfiltered
       </span>
     <% end %>
   <% end %>
