--- a/app/views/words/export.html.erb
+++ b/app/views/words/export.html.erb
@@ -1,5 +1,5 @@
 <div class="words-export-page">
-  <h1 class="page-title">Export CSV</h1>
+  <h1 class="page-title">Export your content</h1>
 
   <p>
     Download a CSV of your word list for data backup or to use in another study tool. Choose to export all words you have created, or just the words marked as "cards not created."
