--- a/app/views/words/import.html.erb
+++ b/app/views/words/import.html.erb
@@ -1,5 +1,5 @@
 <div class="words-import-page">
-  <h1 class="page-title">Import CSV</h1>
+  <h1 class="page-title">Import content</h1>
 
   <p>
     Prepare a CSV of words to import into your jpstudy word list. The CSV collums will need to exactly match the following format. The first two columns are <strong>required</strong> to be present and the remaining columns may be left blank if desired.
