--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <noscript><%= stylesheet_link_tag "noscript", "data-turbo-track": "reload" %></noscript>
     <%= javascript_importmap_tags %>
-    <%= favicon_link_tag asset_path("favicon.ico") %>
+    <%= favicon_link_tag asset_path(Rails.env.production? ? "favicon.ico" : "dev-favicon.ico") %>
   </head>
   <body>
     <%= render "navigation" %>
