Allow autocomplete on source name in word form

--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -12,7 +12,7 @@
 
     <div class="form-field">
       <%= form.label :source_name %>
-      <%= form.text_field :source_name, autocomplete: "off", data: { lpignore: true, word_form_target: "sourceName", action: "word-form#validateSource" } %>
+      <%= form.text_field :source_name, data: { lpignore: true, word_form_target: "sourceName", action: "word-form#validateSource" } %>
     </div>
 
     <div class="form-field">
