Cleanup tasks after test user lifecycle run-through

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -94,7 +94,7 @@
   }
   .words-list-container {
     padding-top: 6px;
-    .no-words-message {
+    #no-words-message {
       text-align: center;
       padding-top: 40px;
       color: #9CA3AF;
