--- a/app/views/words/_empty_words_message.html.erb
+++ b/app/views/words/_empty_words_message.html.erb
@@ -1,4 +1,4 @@
-<div class="no-words-message">
+<div id="no-words-message">
   <% if @current_user.words.size.zero? %>
     <p>
       Welcome! 👋 It looks like you haven't added any words yet.
