--- a/app/views/passwords/reset_form.html.erb
+++ b/app/views/passwords/reset_form.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <%= hidden_field_tag :token, params[:token]&.strip %>
-      <%= hidden_field_tag :user_id, params[:user_id]&.strip %>
+      <%= hidden_field_tag :username, params[:username]&.strip %>
 
       <div class="actions">
         <%= submit_tag "Reset password", class: "button-blue" %>
