Make copying japanese content in word cards easier

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -199,6 +199,7 @@
     padding-bottom: 4px;
     .japanese {
       font-size: 1.4em;
+      user-select: all; // select all the content with one click
     }
     .english {
       .right-arrow {
