--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -25,6 +25,13 @@
       <%= form.text_area :note, rows: 3, cols: 32, data: { lpignore: true } %>
     </div>
 
+    <% if word.cards_created_at %>
+      <div class="form-field">
+        <%= form.label :cards_created_at %>
+        <%= form.date_field :cards_created_at, { lpignore: true } %>
+      </div>
+    <% end %>
+
     <div class="form-actions">
       <%# currently duplicated in app/views/words/create.turbo_stream.erb:7 %>
       <%= form.submit id: "create-word-button", class: "button-blue submit", data: { controller: "disable", disable_with_value: "Saving...", action: "disable#disableButton", disable_target: "button" } %>
