Working on making date picker styles look similar cross-browser

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -43,6 +43,9 @@
         outline-color: #3B82F6;
       }
     }
+    input[type="date"] {
+      -webkit-appearance: none;
+    }
   }
   .form-actions {
     padding-top: 10px;
