Continuing to style date input cross-browser

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -27,6 +27,8 @@
       padding: 12px;
       width: 200px;
       height: 12px;
+      background-color: white;
+      color: #0F172A;
       &:focus {
         outline-color: #3B82F6;
       }
