Attempt to align date text left like other input fields

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -29,6 +29,7 @@
       height: 12px;
       background-color: white;
       color: #0F172A;
+      text-align: left;
       &:focus {
         outline-color: #3B82F6;
       }
