--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -46,6 +46,7 @@
       }
     }
     input[type="date"] {
+      // make date input look more like site style on mobile safari
       -webkit-appearance: none;
     }
   }
@@ -204,7 +205,7 @@
     padding-bottom: 4px;
     .japanese {
       font-size: 1.4em;
-      user-select: all; // select all the content with one click
+      // user-select: all; // select all the content with one click
     }
     .english {
       .right-arrow {
