--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -16,7 +16,7 @@
       <% end %>
     </div>
     <div class="edit">
-      <%= link_to(edit_word_path(word)) do %>
+      <%= link_to(edit_word_path(word, filter_params)) do %>
         <%= heroicon "pencil-alt", variant: :outline %>
       <% end %>
     </div>
