--- a/app/views/words/import.html.erb
+++ b/app/views/words/import.html.erb
@@ -11,8 +11,8 @@
     <li>[2]Source name (i.e. Minna no Nihongo)</li>
     <li>[3]Source reference (i.e. Chapter 12)</li>
     <li>[4]Cards created (true/false)</li>
-    <li>[5]Cards created on (date)</li>
-    <li>[6]Added to list on (date)</li>
+    <li>[5]Cards created on (mm/dd/yyyy)</li>
+    <li>[6]Added to list on (mm/dd/yyyy)</li>
     <li>[7]Note</li>
   </ul>
 
