--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -25,7 +25,7 @@
       border-radius: 4px;
       border: 1px solid #bbb;
       padding: 12px;
-      width: 200px;
+      width: calc(100% - 24px);
       height: 12px;
       background-color: white;
       color: #0F172A;
@@ -41,6 +41,7 @@
       height: 12px;
       font-family: 'Roboto', Arial, Helvetica, sans-serif;
       height: auto; // required to make html row setting work
+      width: calc(100% - 24px);
       &:focus {
         outline-color: #3B82F6;
       }
