--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,5 +1,6 @@
 <div class="word-form" data-controller="word-form">
-  <%= form_with(model: word) do |form| %>
+  <%# request.referrer is nil when we're on a normal form page and it has a url when we've gotten the form dropped into another page with Turbo %>
+  <%= form_with(model: word, html: { data: { turbo: request.referrer.present? } }) do |form| %>
     <div class="form-field">
       <%= form.label :english %>
       <%= form.text_field :english, required: true, autocomplete: "off", data: { lpignore: true }, autofocus: true %>
@@ -37,9 +38,21 @@
     <% end %>
 
     <div class="form-actions">
-      <%# currently duplicated in app/views/words/create.turbo_stream.erb:7 %>
-      <%= form.submit id: "create-word-button", class: "button-blue submit", data: { controller: "disable", disable_with_value: "Saving...", action: "disable#disableButton", disable_target: "button" } %>
-      <%= link_to "Cancel", (word.id.present? ? word_path(word) : :back), class: "basic-button back-button", data: { turbo: (word.id.present? ? true : false) } %>
+      <%=
+        # this submit input element is currently duplicated in app/views/words/create.turbo_stream.erb:7
+        form.submit(
+          id: "create-word-button",
+          class: "button-blue submit",
+          data: {
+            controller: "disable",
+            disable_with_value: "Saving...",
+            disable_use_direct_form_submit_value: request.referrer.nil?, # request.referrer is nil when we're on a normal form page and it has a url when we've gotten the form dropped into another page with Turbo
+            action: "disable#disableButton",
+            disable_target: "button"
+          }
+        )
+      %>
+      <%= link_to "Cancel", (word.id.present? ? word_path(word) : words_path), class: "basic-button back-button" %>
     </div>
   <% end %>
 </div>
