Tweak skeleton word for mobile

--- a/app/views/words/_skeleton_word.html.erb
+++ b/app/views/words/_skeleton_word.html.erb
@@ -23,15 +23,15 @@
     <span class="japanese" lang="jp">骨格</span>
     <span class="english">
       <%= heroicon "chevron-right", variant: :outline, options: { class: "right-arrow" } %>
-      <span class="english-text">skeleton</span>
+      <span class="english-text">skeleton; skeletal structure; frame;</span>
     </span>
   </div>
 
     <div class="source">
-      <span class="added-on">Added 11/12/2021</span>
+      <span class="added-on large-only">Added 11/12/2021</span>
       <span class="source-name">
         <span class="large-only">from </span>
-        Jisho.org
+        Jisho.org Vocab
       </span>
       <span class="source-reference"></span>
     </div>
