Simplify where default word limit is refrenced from

--- a/app/views/static_pages/word_limit_explanation.html.erb
+++ b/app/views/static_pages/word_limit_explanation.html.erb
@@ -2,7 +2,7 @@
   <h1 class="title">Word limit</h1>
 
   <p>
-    In order to prevent abuse and provide the best experience for all jpstudy users, new accounts are created with a default word limit. This limit currently starts at <%= @word_limit %>, and you will see warnings if you try to add additional words once you have reached your word limit.
+    In order to prevent abuse and provide the best experience for all jpstudy users, new accounts are created with a default word limit. This limit currently starts at <%= User::DEFAULT_WORD_LIMIT %>, and you will see warnings if you try to add additional words once you have reached your word limit.
   </p>
 
   <h3 class="title">How do I add more words?</h3>
