--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jpstudy<%= page_subtitle(action_name, controller_name) %></title>
+    <title>jpstudy<%= page_subtitle_helper %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%# if flash[:alert] || flash[:notice] || flash[:success] %>
