--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -5,6 +5,103 @@ html {
   body { margin: 0px; }
 }
 
+.admin-tools-bar {
+  position: relative;
+  overflow: hidden;
+  background-color: #374151;
+  padding: 4px;
+  display: flex;
+  justify-content: space-between;
+  .admin-details,
+  .admin-links {
+    display: flex;
+    align-items: center;
+  }
+  .admin-item {
+    color: #9CA3AF;
+    text-align: center;
+    font-size: 0.8em;
+    background-color: #374151;
+    border: none;
+    margin: 0px;
+    text-decoration: none;
+    svg {
+      height: 0.8em;
+    }
+    .underline {
+      text-decoration: underline;
+    }
+  }
+  .admin-details {
+    .admin-item {
+      &:not([style*="display:none"]):not(:first-child)::before {
+        content: "|";
+        color: #6B7280;
+        padding: 0px 4px 0px 6px;
+      }
+    }
+  }
+  .admin-links {
+    .admin-item {
+      &:not(:nth-last-child(-n+2))::after {
+        content: "|";
+        color: #6B7280;
+        padding: 0px 6px 0px 4px;
+      }
+    }
+    a {
+      &:hover {
+        color: #D1D5DB;
+      }
+    }
+    .nr-link {
+      color: #008996;
+      &:hover {
+        color: #1DCAD3;
+      }
+    }
+    .heroku-link {
+      color: #8a6ab4;
+      &:hover {
+        color: #b88fee;
+      }
+    }
+    .close-admin-tools-button {
+      -webkit-appearance: none;
+      color: #111827;
+      background-color: rgba(243, 244, 246, 0.5); // #F3F4F6
+      border: none;
+      opacity: 0.6;
+
+      border-radius: 50px;
+      width: fit-content;
+      height: fit-content;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      float: right;
+      padding: 2px;
+      margin-left: 8px;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 1;
+      }
+      .icon-solid {
+        height: 0.8em;
+      }
+    }
+  }
+  @media (max-width: 660px) {
+    .desktop-only-link {
+      display: none;
+    }
+    .close-admin-tools-button {
+      margin-left: 6px;
+    }
+  }
+}
+
 nav {
   position: relative;
   overflow: hidden;
