Add total user count to admin tools bar

--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -83,7 +83,7 @@ html {
     }
   }
   @media (max-width: 660px) {
-    .desktop-only-link {
+    .desktop-only {
       display: none;
     }
     .close-admin-tools-button {
