--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -9,17 +9,18 @@
 
   <ul class="code-block">
     <li>NAVIGATION:</li>
-    <li>&#x21e7; + &#x2325; + (w/a) <%= heroicon "arrow-narrow-right" %> word list</li>
-    <li>&#x21e7; + &#x2325; + c <%= heroicon "arrow-narrow-right" %> word list + card filters</li>
-    <li>&#x21e7; + &#x2325; + n <%= heroicon "arrow-narrow-right" %> new word</li>
-    <li>&#x21e7; + &#x2325; + f <%= heroicon "arrow-narrow-right" %> word search</li>
-    <li>&#x21e7; + &#x2325; + s <%= heroicon "arrow-narrow-right" %> stats</li>
-    <li>&#x21e7; + &#x2325; + e <%= heroicon "arrow-narrow-right" %> word list export tool</li>
-    <li>&#x21e7; + &#x2325; + i <%= heroicon "arrow-narrow-right" %> word list import tool</li>
+    <li>w <%= heroicon "arrow-narrow-right" %> word list</li>
+    <li>c <%= heroicon "arrow-narrow-right" %> word list + card filters</li>
+    <li>n <%= heroicon "arrow-narrow-right" %> new word form</li>
+    <li>f <%= heroicon "arrow-narrow-right" %> word search</li>
+    <li>s <%= heroicon "arrow-narrow-right" %> word stats</li>
+    <li>e <%= heroicon "arrow-narrow-right" %> word list export tool</li>
+    <li>i <%= heroicon "arrow-narrow-right" %> word list import tool</li>
+    <li>k <%= heroicon "arrow-narrow-right" %> show keyboard shortcuts</li>
     <br/>
     <li>BONUS:</li>
-    <li>escape <%= heroicon "arrow-narrow-right" %> close flash message or the new word form</li>
-    <li>enter <%= heroicon "arrow-narrow-right" %> close flash message (alt)</li>
+    <li>escape <%= heroicon "arrow-narrow-right" %> close flash message or cancel word form</li>
+    <li>enter&nbsp; <%= heroicon "arrow-narrow-right" %> close flash message or submit form</li>
   </ul>
 
   <p class="contact">
